// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correct resolve owner 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                2
            ]
        ]
    },
    \\"2\\": {
        \\"C\\": [
            \\"3\\"
        ],
        \\"N\\": [
            1
        ]
    },
    \\"3\\": {
        \\"C\\": [
            \\"4\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                1
            ]
        ]
    },
    \\"4\\": {
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            1
        ]
    }
}",
  "html": "
<span><span>Text for content<!--0--></span>
<!--0-->
<!--0--></span>
<!--0-->
",
}
`;

exports[`should remove block in if 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"visible\\": true
        },
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            1
        ]
    },
    \\"2\\": {
        \\"C\\": [
            \\"3\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                3
            ]
        ]
    },
    \\"3\\": {
        \\"N\\": [
            0,
            2
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            2
        ]
    }
}",
  "html": "
<div class=\\"content\\"> Text content for
  <!--0-->foo
  <!--0-->
</div>
<!--0-->
<!--0-->
",
}
`;

exports[`should work useblock if was update from block component 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            1
        ]
    }
}",
  "html": "
<!--0-->
<!--0-->
",
}
`;

exports[`should work with {% block "default" %} 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                1
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <a> Text for content
    <!--0-->
  </a>
</div>
",
}
`;

exports[`should work with component arguments 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"url\\": \\"http://example.com\\"
        },
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                5
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            0,
            2,
            4
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <a href=\\"http://example.com\\"> Text for
    <!--0-->http://example.com
    <!--1-->
    <!--0-->
  </a>
</div>
",
}
`;

exports[`should work with component default block 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"url\\": \\"http://example.com\\"
        },
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                3
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            0,
            2
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <a href=\\"http://example.com\\"> Text for
    <!--0-->http://example.com
    <!--0-->
  </a>
</div>
",
}
`;

exports[`should work with defblock nested in useblock 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"loaded\\": false,
            \\"visible\\": false,
            \\"red\\": false
        },
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            2
        ]
    },
    \\"2\\": {
        \\"O\\": {
            \\"loaded\\": false,
            \\"visible\\": false
        },
        \\"C\\": [
            \\"3\\"
        ],
        \\"N\\": [
            1
        ]
    },
    \\"3\\": {
        \\"O\\": {
            \\"loaded\\": false
        },
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            3
        ]
    }
}",
  "html": "
<!--0-->
<!--0-->
<!--0-->
<!--0-->
",
}
`;

exports[`should work with for 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"url\\": \\"http://example.com\\"
        },
        \\"C\\": [
            \\"2\\"
        ],
        \\"N\\": [
            1,
            [
                1,
                1
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            0
        ]
    },
    \\"3\\": {
        \\"C\\": [
            \\"6\\"
        ],
        \\"N\\": [
            0
        ]
    },
    \\"4\\": {
        \\"C\\": [
            \\"8\\"
        ],
        \\"N\\": [
            1
        ]
    },
    \\"5\\": {
        \\"C\\": [
            \\"10\\"
        ],
        \\"N\\": [
            2
        ]
    },
    \\"6\\": {
        \\"O\\": {
            \\"url\\": \\"http://foo.example.com\\"
        },
        \\"C\\": [
            \\"7\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                3
            ]
        ]
    },
    \\"7\\": {
        \\"N\\": [
            0,
            2
        ]
    },
    \\"8\\": {
        \\"O\\": {
            \\"url\\": \\"http://bar.example.com\\"
        },
        \\"C\\": [
            \\"9\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                3
            ]
        ]
    },
    \\"9\\": {
        \\"N\\": [
            0,
            2
        ]
    },
    \\"10\\": {
        \\"O\\": {
            \\"url\\": \\"http://baz.example.com\\"
        },
        \\"C\\": [
            \\"11\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                3
            ]
        ]
    },
    \\"11\\": {
        \\"N\\": [
            0,
            2
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"3\\",
            \\"4\\",
            \\"5\\"
        ],
        \\"N\\": [
            0,
            2
        ]
    }
}",
  "html": "
<ul>
  <li>
    <a href=\\"http://foo.example.com\\">Text for
      <!--0-->http://foo.example.com
      <!--0-->
    </a>
  </li>
  <li>
    <a href=\\"http://bar.example.com\\">Text for
      <!--0-->http://bar.example.com
      <!--0-->
    </a>
  </li>
  <li>
    <a href=\\"http://baz.example.com\\">Text for
      <!--0-->http://baz.example.com
      <!--0-->
    </a>
  </li>
</ul>
<a href=\\"http://example.com\\">Home
  <!--0-->
</a>
<!--0-->
",
}
`;

exports[`should work with two named blocks 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"C\\": [
            \\"2\\",
            \\"3\\"
        ],
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            [
                0,
                0,
                1
            ],
            [
                0,
                1
            ],
            [
                0,
                1,
                1
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            0
        ]
    },
    \\"3\\": {
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <div>
    <div class=\\"title\\"> Text for title
      <!--0-->
    </div>
    <div class=\\"content\\"> Text for content
      <!--1-->
    </div>
  </div>
</div>
",
}
`;

exports[`should work with two nested if 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"big\\": false,
            \\"red\\": false
        },
        \\"N\\": [
            0
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            1
        ]
    }
}",
  "html": "
<!--0-->
<!--0-->
",
}
`;
